--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "engines": {
     "vscode": "^1.93.0"
   },
-  "version": "1.0.1",
+  "icon": "bot.webp",
+  "version": "1.0.2",
   "extensionDependencies": [
     "github.copilot-chat"
   ],
