--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,8 +15,11 @@ jobs:
         run: |
           bun install
           bunx vsce package
+      - name: Get version from package.json
+        id: get_version
+        run: echo version=$(jq -r .version < package.json) >> $GITHUB_OUTPUT
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: vscode-translate-agent-1.0.0.vsix
+          files: vscode-translate-agent-${{ steps.get_version.outputs.version }}.vsix
